src/log/build_2025-05-30_18-24-33/behaviour_planner_pkg/stdout_stderr.log
running egg_info
writing ../build/behaviour_planner_pkg/behaviour_planner_pkg.egg-info/PKG-INFO
writing dependency_links to ../build/behaviour_planner_pkg/behaviour_planner_pkg.egg-info/dependency_links.txt
writing entry points to ../build/behaviour_planner_pkg/behaviour_planner_pkg.egg-info/entry_points.txt
writing requirements to ../build/behaviour_planner_pkg/behaviour_planner_pkg.egg-info/requires.txt
writing top-level names to ../build/behaviour_planner_pkg/behaviour_planner_pkg.egg-info/top_level.txt
reading manifest file '../build/behaviour_planner_pkg/behaviour_planner_pkg.egg-info/SOURCES.txt'
writing manifest file '../build/behaviour_planner_pkg/behaviour_planner_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying behaviour_planner_pkg/static_obstacle.py -> /root/ros2_ws/src/build/behaviour_planner_pkg/build/lib/behaviour_planner_pkg
copying behaviour_planner_pkg/traffic_sign.py -> /root/ros2_ws/src/build/behaviour_planner_pkg/build/lib/behaviour_planner_pkg
running install
running install_lib
copying /root/ros2_ws/src/build/behaviour_planner_pkg/build/lib/behaviour_planner_pkg/static_obstacle.py -> /root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg
copying /root/ros2_ws/src/build/behaviour_planner_pkg/build/lib/behaviour_planner_pkg/traffic_sign.py -> /root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg
byte-compiling /root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/static_obstacle.py to static_obstacle.cpython-310.pyc
  File "/root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/static_obstacle.py", line 139
    StaticObstacleCondition("static_obstacle_is_misc", bt_instance, target_static_obstacle_conditions=[
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

byte-compiling /root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg/traffic_sign.py to traffic_sign.cpython-310.pyc
running install_data
running install_egg_info
removing '/root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/behaviour_planner_pkg/behaviour_planner_pkg.egg-info to /root/ros2_ws/src/install/behaviour_planner_pkg/lib/python3.10/site-packages/behaviour_planner_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing behaviour_planner script to /root/ros2_ws/src/install/behaviour_planner_pkg/lib/behaviour_planner_pkg
writing list of installed files to '/root/ros2_ws/src/build/behaviour_planner_pkg/install.log'
